Feat: created the ability to provider impossible sets of attribute combinations. Can be further extended for combinations which are impossible if LESS than all attributes. For now it is strictly if >= to all attributes in the set.
Changed viz to show impossible attributes in gray. General code cleanup besides that. Next big item is to refactor the live GUI to be:

1.) interactive from within program.
2.) fast and smooth.
3.) prettier than it is now.

The plan is to do this with some sort of js visualization or perhaps openGL if clicking implementation is not too tricky.